2009-02-17  Martin Leidig  <mleidig@schlund.de>

	Added support for including XML, XSL and images from modules by
	extending the resource resolution mechanism

	Modified:
	* src/de/schlund/pfixcore/lucefix/IncludeFileHandler.java
	* src/de/schlund/pfixcore/lucefix/DocumentCache.java
	* src/de/schlund/pfixcore/editor2/core/spring/PathResolverServiceImpl.java
	* src/de/schlund/pfixcore/editor2/core/spring/internal/TargetPfixImpl.java
	* src/de/schlund/pfixcore/editor2/core/spring/internal/ImageImpl.java
	* src/de/schlund/pfixcore/editor2/core/spring/internal/IncludePartThemeVariantImpl.java
	* src/de/schlund/pfixcore/editor2/core/spring/internal/TargetAuxDepImpl.java
	* src/de/schlund/pfixcore/editor2/core/spring/internal/ProjectImpl.java
	* src/de/schlund/pfixcore/editor2/core/spring/internal/IncludePartImpl.java
	* src/de/schlund/pfixcore/editor2/core/spring/IncludeFactoryServiceImpl.java
	* src/de/schlund/pfixcore/example/EncodingTestState.java
	* src/de/schlund/pfixcore/util/DumpText.java
	* src/de/schlund/pfixcore/util/CheckIncludes.java
	* src/de/schlund/pfixxml/IncludeDocumentExtensionSaxon2.java
	* src/de/schlund/pfixxml/IncludeDocumentFactory.java
	* src/de/schlund/pfixxml/ImageThemedSrcSaxon1.java
	* src/de/schlund/pfixxml/IncludeDocumentExtension.java
	* src/de/schlund/pfixxml/DependencyTrackerSaxon2.java
	* src/de/schlund/pfixxml/DependencyTracker.java
	* src/de/schlund/pfixxml/IncludeDocumentExtensionSaxon1.java
	* src/de/schlund/pfixxml/ImageThemedSrcSaxon2.java
	* src/de/schlund/pfixxml/ResultDocument.java
	* src/de/schlund/pfixxml/ImageThemedSrc.java
	* src/de/schlund/pfixxml/IncludeDocument.java
	* src/de/schlund/pfixxml/DependencyTrackerSaxon1.java
	* src/de/schlund/pfixxml/config/GlobalConfigurator.java
	* src/de/schlund/pfixxml/config/includes/SimpleNamespaceContext.java
	* src/de/schlund/pfixxml/config/GlobalConfig.java
	* src/de/schlund/pfixxml/targets/XMLLeafTarget.java
	* src/de/schlund/pfixxml/targets/LeafTarget.java