@@ -1,5 +1,13 @@
 2009-02-17  Martin Leidig  <mleidig@schlund.de>
 
+	* src/de/schlund/pfixxml/IncludeDocumentExtension.java: set module
+	from parent if none is specified for dynamic includes from within
+	modules
+	* src/de/schlund/pfixxml/resources/ModuleResource.java: disable
+	caching on all JarURLConnections
+
+2009-02-17  Martin Leidig  <mleidig@schlund.de>
+
 	Added support for including XML, XSL and images from modules by
 	extending the resource resolution mechanism
 
